--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "joi": "^17.4.0",
     "mongoose": "^5.13.1",
+    "mysql": "^2.18.1",
     "node-uuid": "^1.4.8",
     "yup": "^0.32.9"
   },
